--- a/frontend/src/components/ui/input/styles.module.scss
+++ b/frontend/src/components/ui/input/styles.module.scss
@@ -4,11 +4,10 @@
     height: 40px;
     border: 0;
     border-radius: 0.5rem;
-    background-color: var(--dark-900);
+    background-color: var(--dark-700);
     color: var(--branco);
     padding: 1rem;
-    border: 1px solid var(--gray-100);
-
+    border: 1px solid var(--branco);
 }
 
 .input::placeholder{
