--- a/frontend/styles/home.module.scss
+++ b/frontend/styles/home.module.scss
@@ -1,7 +1,50 @@
-.container{
-    color: red;
+.containerCenter{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: var(--dark-700);
+}
+
+.login{
+    margin-top: 0.1rem;
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 2rem 1.5rem;
+
     h1{
-        font-size: 50px;
-        color: rgba(7, 5, 92, 0.767);
+        color: var(--branco);
+        padding-bottom: 1rem;
     }
+
+    form{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    form button{
+        height: 40px;
+        font-size: 1.2rem;
+        width: 50%;
+        align-self: center;
+    }
+
+}
+
+.text{
+    margin-top: 1rem;
+    color: var(--branco);
+    cursor: pointer;
+}
+
+@media (max-width: 600px){
+    .login{
+        width: 90%;
+    }
+    
 }
