--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -12,11 +12,13 @@
     --verde-escuto: #035703;
     --vermelho-escuro: #FF3F4B;
     --azul-escuro:#090b8b;
+    --verde-claro:#3dd137;
 
 
     --dark-900: #101026;
     --dark-700: #1D1D2E;
-    --gray-100: #8A8A8A;
+    --gray-100: #8A8A8A;    
+    --green-900: #1B5E20;
 }
 
 button{
